fix: height scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -538,13 +538,14 @@ template {
 
 body {
   font-family: "Microsoft JhengHei", Arial, sans-serif;
+  overflow: hidden;
 }
 
 #app {
   display: grid;
   grid-template-columns: 256px 1fr;
-  height: 100dvh;
-  max-height: 100dvh;
+  height: 100vh;
+  max-height: 100vh;
   background-color: var(--neutral-200);
   overflow: hidden;
 }
@@ -671,7 +672,7 @@ body {
 .sidebar-wrapper .menu {
   margin: 0;
   padding: 0 8px;
-  max-height: calc(100dvh - 120px);
+  max-height: calc(100vh - 120px);
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -944,7 +945,7 @@ body {
 /* Table */
 .table-container {
   max-width: 100%;
-  max-height: calc(100dvh - 400px);
+  max-height: calc(100vh - 400px);
   overflow: auto;
 }
 
