--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -149,7 +149,7 @@
 /* Table */
 .table-container {
   max-width: 100%;
-  max-height: calc(100dvh - 400px);
+  max-height: calc(100vh - 400px);
   overflow: auto;
 }
 
