--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -6,13 +6,14 @@
 
 body {
   font-family: "Microsoft JhengHei", Arial, sans-serif;
+  overflow: hidden;
 }
 
 #app {
   display: grid;
   grid-template-columns: 256px 1fr;
-  height: 100dvh;
-  max-height: 100dvh;
+  height: 100vh;
+  max-height: 100vh;
   background-color: var(--neutral-200);
   overflow: hidden;
 
@@ -154,7 +155,7 @@ body {
   .menu {
     margin: 0;
     padding: 0 8px;
-    max-height: calc(100dvh - 120px);
+    max-height: calc(100vh - 120px);
     overflow-x: hidden;
     overflow-y: auto;
   }
